spikes/s2-vap-map-offline/testdata/snapshot/mutatingadmissionpolicies.yaml
apiVersion: v1
items:
- apiVersion: admissionregistration.k8s.io/v1
  kind: MutatingAdmissionPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"admissionregistration.k8s.io/v1","kind":"MutatingAdmissionPolicy","metadata":{"annotations":{},"name":"map-apply"},"spec":{"failurePolicy":"Fail","matchConstraints":{"resourceRules":[{"apiGroups":["apps"],"apiVersions":["v1"],"operations":["CREATE","UPDATE"],"resources":["deployments"]}]},"mutations":[{"applyConfiguration":{"expression":"Object{\n  metadata: Object.metadata{\n    labels: {\"fathom.dev/mutated-by\": \"map-apply\"}\n  },\n  spec: Object.spec{\n    template:  [...]
    creationTimestamp: "2026-09-17T22:17:19Z"
    generation: 1
    name: map-apply
    resourceVersion: "1179"
    uid: 5f4c9553-e51b-43e8-b4ee-f718b440300c
  spec:
    failurePolicy: Fail
    matchConstraints:
      matchPolicy: Equivalent
      namespaceSelector: {}
      objectSelector: {}
      resourceRules:
      - apiGroups:
        - apps
        apiVersions:
        - v1
        operations:
        - CREATE
        - UPDATE
        resources:
        - deployments
        scope: '*'
    mutations:
    - applyConfiguration:
        expression: |-
          Object{
            metadata: Object.metadata{
              labels: {"fathom.dev/mutated-by": "map-apply"}
            },
            spec: Object.spec{
              template: Object.spec.template{
                spec: Object.spec.template.spec{
                  securityContext: Object.spec.template.spec.securityContext{
                    runAsNonRoot: true
                  }
                }
              }
            }
          }
      patchType: ApplyConfiguration
    reinvocationPolicy: Never
- apiVersion: admissionregistration.k8s.io/v1
  kind: MutatingAdmissionPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"admissionregistration.k8s.io/v1","kind":"MutatingAdmissionPolicy","metadata":{"annotations":{},"name":"map-jsonpatch"},"spec":{"failurePolicy":"Fail","matchConstraints":{"resourceRules":[{"apiGroups":["apps"],"apiVersions":["v1"],"operations":["CREATE","UPDATE"],"resources":["deployments"]}]},"mutations":[{"jsonPatch":{"expression":"has(object.metadata.annotations)\n  ? [JSONPatch{op: \"add\", path: \"/metadata/annotations/fathom.dev~1patched-by\", value: \"map-jsonpatch\" [...]
    creationTimestamp: "2026-09-17T22:17:19Z"
    generation: 1
    name: map-jsonpatch
    resourceVersion: "1181"
    uid: 312fb551-3026-4fb9-aaf5-a81d8a503e62
  spec:
    failurePolicy: Fail
    matchConstraints:
      matchPolicy: Equivalent
      namespaceSelector: {}
      objectSelector: {}
      resourceRules:
      - apiGroups:
        - apps
        apiVersions:
        - v1
        operations:
        - CREATE
        - UPDATE
        resources:
        - deployments
        scope: '*'
    mutations:
    - jsonPatch:
        expression: |-
          has(object.metadata.annotations)
            ? [JSONPatch{op: "add", path: "/metadata/annotations/fathom.dev~1patched-by", value: "map-jsonpatch"}]
            : [JSONPatch{op: "add", path: "/metadata/annotations", value: {"fathom.dev/patched-by": "map-jsonpatch"}}]
      patchType: JSONPatch
    reinvocationPolicy: Never
- apiVersion: admissionregistration.k8s.io/v1
  kind: MutatingAdmissionPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"admissionregistration.k8s.io/v1","kind":"MutatingAdmissionPolicy","metadata":{"annotations":{},"name":"map-reinvoke-1-reader"},"spec":{"failurePolicy":"Fail","matchConstraints":{"resourceRules":[{"apiGroups":["apps"],"apiVersions":["v1"],"operations":["CREATE","UPDATE"],"resources":["deployments"]}]},"mutations":[{"applyConfiguration":{"expression":"Object{\n  metadata: Object.metadata{\n    annotations: {\n      \"fathom.dev/tier-seen\": (has(object.metadata.labels) \u002 [...]
    creationTimestamp: "2026-09-17T22:17:19Z"
    generation: 1
    name: map-reinvoke-1-reader
    resourceVersion: "1185"
    uid: 5571a286-9f5c-4304-b38c-52dc1819a406
  spec:
    failurePolicy: Fail
    matchConstraints:
      matchPolicy: Equivalent
      namespaceSelector: {}
      objectSelector: {}
      resourceRules:
      - apiGroups:
        - apps
        apiVersions:
        - v1
        operations:
        - CREATE
        - UPDATE
        resources:
        - deployments
        scope: '*'
    mutations:
    - applyConfiguration:
        expression: |-
          Object{
            metadata: Object.metadata{
              annotations: {
                "fathom.dev/tier-seen": (has(object.metadata.labels) && 'fathom.dev/tier' in object.metadata.labels)
                  ? object.metadata.labels['fathom.dev/tier'] : "unset"
              }
            }
          }
      patchType: ApplyConfiguration
    reinvocationPolicy: IfNeeded
- apiVersion: admissionregistration.k8s.io/v1
  kind: MutatingAdmissionPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"admissionregistration.k8s.io/v1","kind":"MutatingAdmissionPolicy","metadata":{"annotations":{},"name":"map-reinvoke-2-setter"},"spec":{"failurePolicy":"Fail","matchConstraints":{"resourceRules":[{"apiGroups":["apps"],"apiVersions":["v1"],"operations":["CREATE","UPDATE"],"resources":["deployments"]}]},"mutations":[{"applyConfiguration":{"expression":"Object{\n  metadata: Object.metadata{\n    labels: {\"fathom.dev/tier\": \"backend\"}\n  }\n}"},"patchType":"ApplyConfigurati [...]
    creationTimestamp: "2026-09-17T22:17:19Z"
    generation: 1
    name: map-reinvoke-2-setter
    resourceVersion: "1186"
    uid: 838fb7e1-f2cb-446b-8537-9c76f76a664f
  spec:
    failurePolicy: Fail
    matchConstraints:
      matchPolicy: Equivalent
      namespaceSelector: {}
      objectSelector: {}
      resourceRules:
      - apiGroups:
        - apps
        apiVersions:
        - v1
        operations:
        - CREATE
        - UPDATE
        resources:
        - deployments
        scope: '*'
    mutations:
    - applyConfiguration:
        expression: |-
          Object{
            metadata: Object.metadata{
              labels: {"fathom.dev/tier": "backend"}
            }
          }
      patchType: ApplyConfiguration
    reinvocationPolicy: Never
kind: List
metadata:
  resourceVersion: ""
